--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
 
-.idea/.name
-
-.idea/misc.xml
-
-.idea/modules.xml
-
-.idea/react-picker.iml
-
-.idea/vcs.xml
-
-.idea/workspace.xml
-
-.idea/jsLibraryMappings.xml
-
-.idea/watcherTasks.xml
+.idea/
 
 *.scssc
 
