--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "choices"
   ],
   "author": "Nickel Jianhui Zhu <nickeljew@hotmail.com>",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "MIT",
   "private": false,
   "main": "lib/picker.js",
@@ -22,9 +22,12 @@
     "_build": "grunt build",
     "_prepublish": "npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "es6-viewpoint": "^0.1.0",
+    "react-tapper": "^0.1.5"
+  },
   "peerDependencies": {
-    "react": "^0.13.3"
+    "react": "^0.14.3"
   },
   "devDependencies": {
     "babel-core": "^5.8.22",
