--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "choices"
   ],
   "author": "Nickel Jianhui Zhu <nickeljew@hotmail.com>",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "license": "MIT",
   "private": false,
   "main": "lib/picker.js",
+  "style": "css/picker.css",
   "scripts": {
     "prebuild": "rm -rf lib",
     "_build": "grunt build",
