--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "choices"
   ],
   "author": "Nickel Jianhui Zhu <nickeljew@hotmail.com>",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "license": "MIT",
   "private": false,
   "main": "lib/picker.js",
@@ -23,21 +23,33 @@
     "_build": "grunt build",
     "_prepublish": "npm run build"
   },
+  "babel": {
+    "plugins": [
+      "transform-react-jsx"
+    ],
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
   "dependencies": {
     "es6-viewpoint": "^0.1.0",
-    "react-tapper": "^0.1.5"
+    "react-tapper": "^0.1.8"
   },
   "peerDependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
-    "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2",
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "es6-docready": "^1.0.0",
     "es6-dom": "^1.0.0",
     "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
