--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "es6-viewpoint": "^0.1.0",
-    "react-tapper": "^0.1.8"
+    "react-tapper": "^0.1.10"
   },
   "peerDependencies": {
     "react": "^15.1.0",
@@ -43,7 +43,6 @@
   "devDependencies": {
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "es6-docready": "^1.0.0",
@@ -53,7 +52,9 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-webpack": "^1.0.11"
+    "grunt-webpack": "^1.0.11",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": {
     "type": "git",
