--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "choices"
   ],
   "author": "Nickel Jianhui Zhu <nickeljew@hotmail.com>",
-  "version": "1.2.10",
+  "version": "1.2.11",
   "license": "MIT",
   "private": false,
   "main": "lib/picker.js",
@@ -25,16 +25,17 @@
   },
   "babel": {
     "plugins": [
-      "transform-react-jsx"
+      "transform-react-jsx",
+      "transform-class-properties"
     ],
     "presets": [
-      "es2015",
+      "env",
       "react"
     ]
   },
   "dependencies": {
     "es6-viewpoint": "^0.1.3",
-    "react-tapper": "^0.1.14"
+    "react-tapper": "^0.1.15"
   },
   "peerDependencies": {
     "prop-types": "^15.5.8",
@@ -42,20 +43,22 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "es6-docready": "^1.0.0",
     "es6-dom": "^1.0.0",
     "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
+    "grunt-babel": "^7.0.0",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sass": "^2.0.0",
-    "grunt-webpack": "^2.0.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "grunt-webpack": "^3.0.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   },
   "repository": {
     "type": "git",
